# finsage-lite

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SPRINT3_RESULTS.md  SPRINT4_RESULTS.md  SPRINT5_CADRAGE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260211_1527_9d4bc4e70648_initial_schema_documents_and_chunks.py
docs/adr/: 001-html-over-pdf.md  002-pgvector-over-chromadb.md  003-bm25-in-memory.md  004-rrf-over-linear.md  005-hyde-analytical-only.md  006-section-aware-chunking.md  007-table-extraction.md  ADR-008-eval-corpus-scope.md  README.md
docs/architecture/: frontend-overview.md  scaling-considerations.md  system-overview.md
docs/screenshots/: README.md
docs/sprints/: SPRINT_RESULTS.md
evaluation/: __init__.py  ablation.py  harness.py  metrics_generation.py  metrics_retrieval.py  report_generator.py  schemas.py
evaluation/datasets/: financebench.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useBrowse.ts  useDocuments.ts  useIngest.ts  useKeyboardShortcuts.ts  usePageTitle.ts  useSearch.ts
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
frontend/src/pages/: BrowsePage.tsx  DocumentsPage.tsx  NotFoundPage.tsx  SearchPage.tsx
frontend/src/store/: appStore.ts
scripts/: benchmark_search.py  inspect_financebench.py  seed_demo_data.py
src/api/: main.py
src/api/routers/: document.py  health.py  search.py
src/clients/: edgar.py
src/core/: config.py  database.py  exceptions.py  logging.py
src/models/: base.py  chunk.py  document.py
src/repositories/: chunk.py  document.py
src/schemas/: chunking.py  document.py  edgar.py  health.py  parsing.py  search.py  table.py
src/services/: bm25_service.py  chunking.py  embedding.py  generation.py  hyde_service.py  ingestion.py  parsing.py  retrieval_service.py  search.py  table_parser.py
streamlit_app/: Dockerfile  app.py
tests/: conftest.py
tests/evaluation/: test_financebench.py  test_harness.py  test_metrics_generation.py  test_report_generator.py
tests/integration/: test_edgar_client.py  test_embedding.py  test_health.py  test_ingestion.py  test_search_endpoint.py  test_search_latency.py  test_table_extraction.py
tests/unit/: test_bm25_service.py  test_chunking.py  test_dense_search.py  test_edgar_client.py  test_embedding.py  test_generation_service.py  test_health.py  test_hyde_prompt.py  test_hyde_service.py  test_ingestion.py  test_parsing.py  test_retrieval_service.py  test_rrf_fusion.py  test_search_router.py  test_table_parser.py  test_table_schemas.py
(+20 files in other folders)
