# ==============================================================================
# FinSage-Lite - SEC 10-K Filing Analysis RAG System
# Python packaging, linting, type checking, and test configuration
# ==============================================================================

[project]
name = "finsage-lite"
version = "0.1.0"
description = "SEC 10-K filing analysis RAG system with hybrid retrieval"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.2.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "tiktoken>=0.6.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-beautifulsoup4",
    "pandas-stubs",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff Configuration (linter + formatter) ---

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests", "scripts", "evaluation"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]  # Errors, Warnings, pyFlakes, Isort, Bugbear, pyUpgrade
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-bugbear]
# Prevent false positives for FastAPI dependency injection
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Security"
]

# --- Mypy Configuration (type checking) ---

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true  # Third-party libs without stubs
disallow_untyped_defs = false
disallow_incomplete_defs = false
exclude = ["tests/", "scripts/", "evaluation/"]
mypy_path = "src"

# --- Pytest Configuration ---

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: marks tests as requiring a running docker stack",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
